# time-series-analysis

./: .bandit  CHANGELOG.md  Dockerfile  README.md  labeler.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  feature_request.md  performance_issue.md  refactor_request.md  security_vulnerability.md  support_request.md  task_or_enhancement.md  test_case_suggestion.md
.github/workflows/: Build-Python-Application.yml  Docker-build-and-push.yml  Security Scan.yml  auto-assign.y  ci.y  dependabot.yml  docker-build-y  documentation.yy  greetings.yml  label.yml  lint.yml  stale.yml  static-analysis.yml  testing.yml
app/: app.py  logger.py  main.py  output_handler.py  processor.py  queue_handler.py
config/: rabbitmq_config.json  sqs_queue.json
docs/: conf.py  index.rst
tests/: conftest.py  test_logger.py  test_main.py  test_output_handler.py  test_processor.py  test_queue_handler.py
